--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,10 @@ arch:
 - amd64
 - ppc64le
 language: go
-
+#updating go versions to latest versions
 go:
-- 1.13.3
+- 1.13
+- 1.14
 
 install:
 - mkdir -p /home/travis/gopath/bin
